<resources>
    <string name="app_name">Huddle App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dbfemale">female</string>
    <string name="dbmale">male</string>
    <string name="title_activity_check_profile_before_matched">activity_checkProfileBeforeMatched
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="match_notification">Match Notification</string>
    <string name="permission_camera_rationale">Request for camera permission</string>
    <string name="permission_contacts_rationale">GALLERY PERMISSION</string>
    <string name="permision_available_camera">camera available</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="don_t_have_an_account">No account yet?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_one">Create one</string>
    <string name="by_creating_an_account_you_agree_to_the_term_and_use_and_privacy_policy">By creating an account,you agree to the <u>Term and use</u> and <u>Privacy policy</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="cancel">Cancel</string>
    <string name="title_home">Home</string>
    <string name="title_search">My Booking</string>
    <string name="title_notification">RSA</string>
    <string name="title_profile">Profile</string>
    <string name="mobile">Mobile</string>
    <string name="info_screen_desc_4">"I don't know where to start" Is no longer an excuse.</string>
    <string name="thank_you">Thank you</string>
    <string name="its_a_match">You can now say hi to %s</string>
    <string name="got_it">Got it</string>
    <string name="i_l_do_it_later">I will Do it Later</string>
    <string name="its_a_match_title">Its A Match</string>
    <string name="say_hi">Say hi</string>
    <string name="see_profile">See profile</string>
    <string name="delete_history">Delete history</string>
    <string name="cancel_this_crush">Cancel this crush</string>
    <string name="block_report">Block and report</string>
    <string name="add_images">Add Images</string>
    <string name="sending_message">Sending message please wait(%d Completed)</string>
    <string name="sent">Sent</string>
    <string name="delivered">Delivered</string>
    <string name="seen">Seen</string>
    <string name="failed">Failed</string>
    <string name="twitter_login_cancelled">Login Cancelled!</string>
    <string name="twitter_share_successfully">share successfully</string>
    <string name="twitter_duplicate_tweet">Duplicate Tweet!</string>
    <string name="twitter_connection_failed">TwitterConnector failed!</string>
    <string name="twitter_authorization_failed">Authorization failed.</string>
    <string name="twitterException">Please check your device time/date and try again!</string>
    <string name="dots">...</string>
    <string name="slash">/</string>
    <string name="digits_username_restriction">"@abcdefghijklmnopqrstuvwxyz1234567890_.ABCDEFGHIJKLMNOPQRSTUVWXYZ"</string>
    <string name="ownunivercity">ownUniversity</string>
    <string name="otherunivercity">otherUniversity</string>
    <string name="newsidnotexist">News id does not exist</string>
    <string name="s">s</string>
    <string name="gcm_senderid">910462476326</string>
    <string name="FBID">219302921906399</string>
    <string name="cleavertap_phone">Phone</string>
    <string name="cleavertap_gender">Gender</string>
    <string name="cleavertap_university">University</string>
    <string name="cleavertap_department">Department</string>
    <string name="cleavertap_tab">Tab</string>
    <string name="cleavertap_follower">Follower</string>
    <string name="cleavertap_following">Following</string>
    <string name="text">text</string>
    <string name="cleavertap_Usertype">UserType</string>
    <string name="cleavertaphome">Home</string>
    <string name="cleavertapchat">Chat</string>
    <string name="cleavertapprofile">Profile</string>
    <string name="cleavertapExplore">Explore</string>
    <string name="cleavertapNewsDetail">NewsDetail</string>
    <string name="cleavertapNotification">Notification</string>
    <string name="cleavertabtapchange">Tab Change</string>
    <string name="clavertapsearch">Search</string>
    <string name="cleavertapqwery">query</string>
    <string name="cleavertap_contenttype">contentType</string>
    <string name="cleavertap_contentid">contentId</string>
    <string name="cleavertap_charlength">textCharacterLength</string>
    <string name="cleavertap_imagecount">imageCount</string>
    <string name="cleavertap_hasVideo">hasVideo</string>
    <string name="cleavertap_hasaudio">hasAudio</string>
    <string name="cleavertap_hasdoc">hasDocument</string>
    <string name="cleavertap_newspost">NewPost</string>
    <string name="cleavertap_Comment">Comments</string>
    <string name="cleavertap_Message">Message</string>
    <string name="cleavertap_Following">Following</string>
    <string name="cleavertap_Privatemessage">PrivateMessage</string>
    <string name="cleavertap_AllowInPopular">AllowInPopular</string>
    <string name="cleavertap_aboutus">AboutUs</string>
    <string name="cleavertap_privacypolicy">PrivacyPolicy</string>
    <string name="cleavartap_type">type</string>
    <string name="cleavertap_legal">Legal</string>
    <string name="cleavertap_editboard">Edit Board</string>
    <string name="cleavertap_isprivate">isPrivate</string>
    <string name="cleavertap_socialmedia">Social Media</string>
    <string name="cleavertap_sharing">Sharing</string>
    <string name="cleavertap_screenname">ScreenName</string>
    <string name="cleavertap_createnewpost">Create New Post</string>
    <string name="cleavertap_post">Post</string>
    <string name="cleavertap_tag">Tag</string>
    <string name="cleavertap_hashtag">hashtag</string>
    <string name="cleavertap_mention">mention</string>
    <string name="cleavertap_contentname">ContentName</string>
    <string name="cleavertap_isWall">isWall</string>
    <string name="cleavertap_selectedboardcount">selectedBoardCount</string>
    <string name="cleavertap_totalBoardCount">totalBoardCount</string>
    <string name="cleavertap_exploreSearch">ExploreSearch</string>
    <string name="cleavertap_textlimit">TextLimit</string>
    <string name="cleavertap_chatconversation">ChatConversation</string>
    <string name="cleavertap_chat">Chat</string>
    <string name="cleavertap_unarchive">Unarchive</string>
    <string name="cleavertap_archive">Archive</string>
    <string name="cleavertap_boardAction">Board Action</string>
    <string name="cleavertap_logout">logout</string>
    <string name="cleavertap_disableAccount">disable account</string>
    <string name="cleavertap_sendmessage">send message</string>
    <string name="cleavertap_ForgotPassword">Forgot Password</string>
    <string name="cleavertap_Canceljoin">Cancel Join</string>
    <string name="cleavertap_join">join</string>
    <string name="cleavertap_unjoin">unjoin</string>
    <string name="cleavertap_report">report</string>
    <string name="cleavertap_registrationScreen">RegistrationScreen viewed</string>
    <string name="cleavertap_loginScreen">LoginScreen viewed</string>
    <string name="cleavertap_newpostscreen">NewPost Create viewed</string>
    <string name="cleavertap_newpostBoardscreen">NewPost Board Selection viewed</string>
    <string name="cleavertap_userProfilescreen">UserProfileScreen viewed</string>
    <string name="cleavertap_settingscreen">SettingScreen  viewed</string>
    <string name="cleavertap_selectSchoolscreen">SelectSchoolScreen  viewed</string>
    <string name="cleavertap_registrationcompletescreen">RegistrationCompleteScreen  viewed</string>
    <string name="cleavertap_Notificationscreen">NotificationScreen  viewed</string>
    <string name="cleavertap_ChatSearchscreen">ChatSearchScreen  viewed</string>
    <string name="cleavertap_NewsDetailscreen">NewsPostDetailScreen  viewed</string>
    <string name="cleavertap_NewsFeedscreen">NewsFeedScreen  viewed</string>
    <string name="cleavertap_chatscreen">ChatScreen  viewed</string>
    <string name="cleavertap_Explorescreen">ExploreScreen  viewed</string>
    <string name="cleavertap_Archivescreen">ArchiveBoardScreen  viewed</string>
    <string name="cleavertap_Followerscreen">FollowerScreen  viewed</string>
    <string name="cleavertap_Followingscreen">FollowingScreen  viewed</string>
    <string name="cleavertap_JoinedBoardscreen">JoinedBoardScreen  viewed</string>
    <string name="cleavertap_BoardRequestscreen">BoardRequestScreen  viewed</string>
    <string name="cleavertap_BoardDetailscreen">BoardDetailScreen  viewed</string>
    <string name="cleavertap_EditProfilescreen">EditProfileScreen  viewed</string>
    <string name="cleavertap_ChatListscreen">ChatListScreen  viewed</string>
    <string name="cleavertap_name">UserName</string>
    <string name="cleavertap_id">Identity</string>
    <string name="cleavertap_email">Email</string>
    <string name="cleavertap_dob">DOB</string>
    <string name="cleavertap_usertype_id">UsertypeId</string>
    <string name="cleavertap_newsId">NewsID</string>
    <string name="cleavertap_username">User_Name</string>
    <string name="cleavertap_userid">Id</string>
    <string name="cleavertap_applaunch">App Launched</string>
    <string name="cleavertap_newsComment">News Comment</string>
    <string name="cleavertap_newsLike">Like</string>
    <string name="cleavertap_newsUnLike">Unlike</string>
    <string name="cleavertap_followername">Follower Name</string>
    <string name="cleavertap_followerid">Follower Id</string>
    <string name="cleavertap_followingname">Following Name</string>
    <string name="cleavertap_followingid">Following Id</string>
    <string name="cleavertap_mediatype">media_type</string>
    <string name="cleavertap_newscreated">Create New Post</string>
    <string name="cleavertap_msgmail">MSG-email</string>
    <string name="cleavertap_msgpush">MSG-push</string>
    <string name="cleavertap_sms">MSG-sms</string>
    <string name="cleavertap_usertypename">UserTypeName</string>
    <string name="cleavertap_usertypeid">UserTypeId</string>
    <string name="cleavertap_notoficatiosettings">Notification Settings</string>
    <string name="cleavertap_likes">Likes</string>
    <string name="cleavertap_Logout">Logout</string>
    <string name="cleavertap_DisableAccount">Disable Account</string>
    <string name="cleavertap_canceljoin">canceljoin</string>
    <string name="cleavertap_Join">Join</string>
    <string name="mixpannal_token">37b6a59c97a09035ee68d99fe5eb3414</string>
    <string name="prompt_email">Email</string>
    <string name="email_hint">Username or Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_forgot_password">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="text_or">Or</string>
    <string name="no_yet_register_with_register">No account  yet ?  Register Now</string>
    <string name="register_x">Register Now</string>
    <string name="prompt_school">Find Your School</string>
    <string name="prompt_school_2">Search Your School Name</string>
    <string name="copy_text">Copy text</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="forward">Forward</string>
    <string name="message_info">Message info</string>
</resources>