<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@color/float_transparent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:gravity="center"
        android:background="@color/float_transparent"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-30dp"
            android:background="@color/float_transparent"
            android:src="@drawable/thankyou_popup"
            android:elevation="@dimen/margin_14"
            >
        </ImageView>


        <LinearLayout
            android:id="@+id/linearlayoutTopPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center"
            android:orientation="vertical"
            android:background="@color/white"
            >
            <TextView
                android:id="@+id/textViewthank_you"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:textSize="@dimen/margin_16"
                android:text="@string/its_a_match_title"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                />


            <TextView
                android:id="@+id/textViewReveiwSubmitted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/margin_20"
                android:textSize="@dimen/text_extra_large"
                android:text="@string/its_a_match"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearlayoutTopPart"
            android:visibility="visible"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:id="@+id/textViewReject"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_text_button_height"
                android:background="@drawable/theme_bottom_text_button_book"
                android:clickable="true"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:letterSpacing="@dimen/button_letter_spacing"
                android:text="@string/reject"
                android:textAllCaps="true"
                android:textSize="@dimen/text_large"
                android:textColor="@color/white"
                android:visibility="visible"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_5"

                />
            <TextView
                android:id="@+id/textViewNotNow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_text_button_height"
                android:background="@drawable/theme_bottom_text_button_book"
                android:clickable="true"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:letterSpacing="@dimen/button_letter_spacing"
                android:text="@string/accept"
                android:textAllCaps="true"
                android:textSize="@dimen/text_large"
                android:textColor="@color/white"
                android:visibility="visible"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_5"

                />



        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
